Implement statement execution

--- a/truth/Makefile
+++ b/truth/Makefile
@@ -1,15 +1,15 @@
 # truth - evaluate a truth table
 # Copyright (C) 2021 - Ethan Marshall
 
-SRC = truth.c parse.c
+SRC = truth.c parse.c run.c
 OBJ = ${SRC:.c=.o}
-HDR = 
+HDR = truth.h
 
 EXE = truth
 INST = /usr/local/bin
 
 ${EXE}: ${OBJ}
-	${CC} ${LDFLAGS} -o $@ ${OBJ}
+	${CC} -lm ${LDFLAGS} -o $@ ${OBJ}
 
 ${OBJ}: ${HDR}
 
