bconv: add tool
Under bexp

--- a/bexp/Makefile
+++ b/bexp/Makefile
@@ -2,19 +2,27 @@
 # Ethan Marshall - 2022
 
 SRC = bexp.c
+SRC2 = bconv.c
 OBJ = ${SRC:.c=.o}
+OBJ2 = ${SRC2:.c=.o}
 
 EXE = bexp
+EXE2 = bconv
 INST = /usr/local/bin
+
+all: ${EXE} ${EXE2}
 
 ${EXE}: ${OBJ}
 	${CC} ${LDFLAGS} -o ${EXE} ${OBJ}
+
+${EXE2}: ${OBJ2}
+	${CC} ${LDFLAGS} -o ${EXE2} ${OBJ2}
 
 .c.o:
 	${CC} ${CFLAGS} -c  $<
 
 clean:
-	rm -f *.o ${EXE}
+	rm -f *.o ${EXE} ${EXE2}
 
 install: ${EXE}
 	mkdir -p ${INST}
