fbox: complete makefile

--- a/fbod/Makefile
+++ b/fbod/Makefile
@@ -4,6 +4,7 @@ SRC = fbod.c
 OBJ = ${SRC:.c=.o}
 
 EXE = fbod
+INS = /usr/local/bin
 
 LIBS = -lm
 
@@ -12,3 +13,16 @@ ${EXE}: ${OBJ}
 
 .c.o:
 	${CC} -c ${CFLAGS} $<
+
+clean:
+	rm -f ${EXE} *.o
+
+install: ${EXE}
+	mkdir -p ${INS}
+	cp -f ${EXE} ${INS}
+	chmod 755 ${INS}/${EXE}
+
+uninstall:
+	rm -f ${INS}/${EXE}
+
+.PHONY: clean install uninstall
