solve: link with standard math library

--- a/solve/Makefile
+++ b/solve/Makefile
@@ -1,10 +1,12 @@
-SRC = solve.c parse.c
+SRC = solve.c parse.c gauss.c
 OBJ = ${SRC:.c=.o}
 HDR = solve.h
 EXE = solve
 
+MLDFLAGS = -lm
+
 ${EXE}: ${OBJ}
-	${CC} -o ${EXE} ${LDFLAGS} ${OBJ}
+	${CC} -o ${EXE} ${MLDFLAGS} ${LDFLAGS} ${OBJ}
 
 ${OBJ}: ${HDR}
 
