solve: add install targets to Makefile

--- a/solve/Makefile
+++ b/solve/Makefile
@@ -1,8 +1,9 @@
 SRC = solve.c parse.c gauss.c
 OBJ = ${SRC:.c=.o}
 HDR = solve.h
-EXE = solve
 
+EXE = solve
+INS = /usr/local/bin
 MLDFLAGS = -lm
 
 ${EXE}: ${OBJ}
@@ -16,4 +17,12 @@ ${OBJ}: ${HDR}
 clean:
 	rm -f ${EXE} *.o
 
-.PHONY: clean
+install: ${EXE}
+	mkdir -p ${INS}
+	cp -f ${EXE} ${INS}
+	chmod 755 ${INS}/${EXE}
+
+uninstall:
+	rm -f ${INS}/${EXE}
+
+.PHONY: clean install uninstall
